✨ Add some fishing stats

--- a/src/assets/lang/language.af.json
+++ b/src/assets/lang/language.af.json
@@ -477,5 +477,6 @@
   "optional": "Optional",
   "dataFromNMSCD": "Data below supplied by the NMSCD",
   "communityMissionProgressTracker": "Community Mission Progress Tracker",
-  "hashCode": "E762D7B67C741D5B19EF5830F9B1BFCB"
+  "fishingJson": "en/Fishing.lang",
+  "hashCode": "ED4328799AB0FF0574F43536B0A50A90"
 }
