--- a/src/assets/lang/language.ar.json
+++ b/src/assets/lang/language.ar.json
@@ -477,5 +477,6 @@
   "optional": "Optional",
   "dataFromNMSCD": "Data below supplied by the NMSCD",
   "communityMissionProgressTracker": "Community Mission Progress Tracker",
-  "hashCode": "F323B6A3346E7358A3DE789773F24F36"
+  "fishingJson": "en/Fishing.lang",
+  "hashCode": "8B61B0D65581358F291496861C090E42"
 }
