--- a/src/assets/lang/language.cs.json
+++ b/src/assets/lang/language.cs.json
@@ -477,5 +477,6 @@
   "optional": "Volitelné",
   "dataFromNMSCD": "Data níže poskytnuta komunitou NMSCD",
   "communityMissionProgressTracker": "Ukazatel pokroku komunitní mise",
-  "hashCode": "B52AFBA85DE9A46C8D67F5004C797065"
+  "fishingJson": "en/Fishing.lang",
+  "hashCode": "BB2436A2C9DB51CC65F52630B82D96F0"
 }
