--- a/src/assets/lang/language.de.json
+++ b/src/assets/lang/language.de.json
@@ -477,5 +477,6 @@
   "optional": "Optional",
   "dataFromNMSCD": "Die folgenden Daten wurden durch die NMSCD zur Verfügung gestellt",
   "communityMissionProgressTracker": "Fortschrittsanzeige für Community Missionen",
-  "hashCode": "5AB6968E6C03DCFCA54F6CA208BD59BD"
+  "fishingJson": "de/Fishing.lang",
+  "hashCode": "636C12277BA1DFA962C84433AE2C9A76"
 }
