--- a/src/assets/lang/language.es.json
+++ b/src/assets/lang/language.es.json
@@ -477,5 +477,6 @@
   "optional": "Opcional",
   "dataFromNMSCD": "Datos a continuación proporcionados por NMSCD",
   "communityMissionProgressTracker": "Seguimiento del Progreso de la Misión Comunitaria",
-  "hashCode": "ED0A5FBC4EE092D3249447A98D6362AC"
+  "fishingJson": "es/Fishing.lang",
+  "hashCode": "132785A7CB433E5C93C01881BA224090"
 }
