--- a/src/assets/lang/language.fr.json
+++ b/src/assets/lang/language.fr.json
@@ -477,5 +477,6 @@
   "optional": "Facultatif",
   "dataFromNMSCD": "Données ci-dessous fournies par le NMSCD",
   "communityMissionProgressTracker": "Suivi des progrès de la mission communautaire",
-  "hashCode": "29572DEFC7EBE7972C96A9AE77CA5BAE"
+  "fishingJson": "fr/Fishing.lang",
+  "hashCode": "313370200A887799F6215E5F65537A2B"
 }
