--- a/src/assets/lang/language.id.json
+++ b/src/assets/lang/language.id.json
@@ -477,5 +477,6 @@
   "optional": "Optional",
   "dataFromNMSCD": "Data below supplied by the NMSCD",
   "communityMissionProgressTracker": "Community Mission Progress Tracker",
-  "hashCode": "C52183BBEC98843272C14178D26239CA"
+  "fishingJson": "en/Fishing.lang",
+  "hashCode": "819231851EE3354F8B0F82E5FA943202"
 }
