--- a/src/assets/lang/language.it.json
+++ b/src/assets/lang/language.it.json
@@ -477,5 +477,6 @@
   "optional": "Opzionale",
   "dataFromNMSCD": "Di seguito i dati forniti da NMSCD",
   "communityMissionProgressTracker": "Contatore progressi missioni comunitarie ",
-  "hashCode": "AEC2A3D927E897CE2BC5935659CBBA94"
+  "fishingJson": "it/Fishing.lang",
+  "hashCode": "83BC23D648B1EF1AC77FB35B871FD00F"
 }
