--- a/src/assets/lang/language.ja.json
+++ b/src/assets/lang/language.ja.json
@@ -477,5 +477,6 @@
   "optional": "Optional",
   "dataFromNMSCD": "Data below supplied by the NMSCD",
   "communityMissionProgressTracker": "Community Mission Progress Tracker",
-  "hashCode": "A1C0F0366CCBC55B977AF10E044BC71D"
+  "fishingJson": "en/Fishing.lang",
+  "hashCode": "B1155E2280BF53A13FC451F60742A249"
 }
