--- a/src/assets/lang/language.kr.json
+++ b/src/assets/lang/language.kr.json
@@ -477,5 +477,6 @@
   "optional": "선택 사항",
   "dataFromNMSCD": "데이터 제공: NMSCD",
   "communityMissionProgressTracker": "커뮤니티 미션 진행도 추적",
-  "hashCode": "AD3D1FE8A3BCC80024B70AAAF55588BB"
+  "fishingJson": "ko/Fishing.lang",
+  "hashCode": "EB75762231D9AC1F2316572ACFD616AA"
 }
