--- a/src/assets/lang/language.ms.json
+++ b/src/assets/lang/language.ms.json
@@ -477,5 +477,6 @@
   "optional": "Optional",
   "dataFromNMSCD": "Data below supplied by the NMSCD",
   "communityMissionProgressTracker": "Community Mission Progress Tracker",
-  "hashCode": "CEA09705CE699D017777CA17335DD2CC"
+  "fishingJson": "en/Fishing.lang",
+  "hashCode": "C5F7CD977FA83973F22BB77E02E59FBA"
 }
