--- a/src/assets/lang/language.nl.json
+++ b/src/assets/lang/language.nl.json
@@ -147,7 +147,7 @@
   "french": "Frans",
   "german": "Duitse",
   "italian": "Italiaans",
-  "korean": "Korean",
+  "korean": "Koreaans",
   "portuguese": "Portugees",
   "brazilianPortuguese": "Braziliaans Portugees",
   "polish": "Pools",
@@ -477,5 +477,6 @@
   "optional": "Optional",
   "dataFromNMSCD": "Onderstaande gegevens zijn verstrekt door de NMSCD",
   "communityMissionProgressTracker": "Community Mission Progress Tracker",
-  "hashCode": "02B1A3B7AEC2F214EBCFB1480DD53349"
+  "fishingJson": "nl/Fishing.lang",
+  "hashCode": "870D2DCD5AB168C0EAF8F040B4B4AC6D"
 }
