--- a/src/assets/lang/language.no.json
+++ b/src/assets/lang/language.no.json
@@ -477,5 +477,6 @@
   "optional": "Optional",
   "dataFromNMSCD": "Data below supplied by the NMSCD",
   "communityMissionProgressTracker": "Community Mission Progress Tracker",
-  "hashCode": "9B19F29D1387560F2136A95E32F7FBDA"
+  "fishingJson": "en/Fishing.lang",
+  "hashCode": "8B6E5A7384B51F4DE077271C10F62B2F"
 }
