--- a/src/assets/lang/language.ph.json
+++ b/src/assets/lang/language.ph.json
@@ -477,5 +477,6 @@
   "optional": "Optional",
   "dataFromNMSCD": "Data below supplied by the NMSCD",
   "communityMissionProgressTracker": "Community Mission Progress Tracker",
-  "hashCode": "30CEDFB392CA0DF002E915C645F09B53"
+  "fishingJson": "en/Fishing.lang",
+  "hashCode": "7C22C2EBDB592F41C4D3CE4EB901C0B7"
 }
