--- a/src/assets/lang/language.pt-br.json
+++ b/src/assets/lang/language.pt-br.json
@@ -477,5 +477,6 @@
   "optional": "Opcional ",
   "dataFromNMSCD": "Dados abaixo fornecidos por the NMSCD",
   "communityMissionProgressTracker": "Rastrear Progresso de Missões da Comunidade ",
-  "hashCode": "F81DAF08F3BA698BDAC0B1C7AFA00941"
+  "fishingJson": "pt-br/Fishing.lang",
+  "hashCode": "8669C49335763F41FA1E8E2714787A95"
 }
