--- a/src/assets/lang/language.pt.json
+++ b/src/assets/lang/language.pt.json
@@ -477,5 +477,6 @@
   "optional": "Optional",
   "dataFromNMSCD": "Data below supplied by the NMSCD",
   "communityMissionProgressTracker": "Community Mission Progress Tracker",
-  "hashCode": "6C6090993FA5D1A60D7C456E6BD2DF94"
+  "fishingJson": "pt/Fishing.lang",
+  "hashCode": "821C13816ADBEAB6A0C764B9ECD15542"
 }
