--- a/src/assets/lang/language.ro.json
+++ b/src/assets/lang/language.ro.json
@@ -477,5 +477,6 @@
   "optional": "Optional",
   "dataFromNMSCD": "Data below supplied by the NMSCD",
   "communityMissionProgressTracker": "Community Mission Progress Tracker",
-  "hashCode": "DFEB5FBB9C6E26F24B0A09532C782981"
+  "fishingJson": "en/Fishing.lang",
+  "hashCode": "4C6BC3BA86898D09DC5881B3C4F53BB3"
 }
