--- a/src/assets/lang/language.ru.json
+++ b/src/assets/lang/language.ru.json
@@ -477,5 +477,6 @@
   "optional": "Необязательный",
   "dataFromNMSCD": "Данные ниже предоставлены NMSCD.",
   "communityMissionProgressTracker": "Отслеживание прогресса миссии сообщества",
-  "hashCode": "9E4EF0D844BBA96D48588D52020181C0"
+  "fishingJson": "ru/Fishing.lang",
+  "hashCode": "36AFB7F57AB5CD91737251B8A68EEDDF"
 }
