--- a/src/assets/lang/language.tr.json
+++ b/src/assets/lang/language.tr.json
@@ -477,5 +477,6 @@
   "optional": "Opsiyonel",
   "dataFromNMSCD": "Aşağıdaki veriler NMSDC tarafından sağlanmıştır.",
   "communityMissionProgressTracker": "Topluluk görevi takibi",
-  "hashCode": "52A73BFFF819A2C94E31C9C8C3B63BD7"
+  "fishingJson": "en/Fishing.lang",
+  "hashCode": "601AA41D5AE53B752496CC67A57EB006"
 }
