--- a/src/assets/lang/language.uk.json
+++ b/src/assets/lang/language.uk.json
@@ -477,5 +477,6 @@
   "optional": "Optional",
   "dataFromNMSCD": "Data below supplied by the NMSCD",
   "communityMissionProgressTracker": "Community Mission Progress Tracker",
-  "hashCode": "E8804787E060DF57DE98B624D4E4151E"
+  "fishingJson": "en/Fishing.lang",
+  "hashCode": "2F0CC09F6DFF8E34AF739FB0EFB3ED31"
 }
