--- a/src/assets/lang/language.ur.json
+++ b/src/assets/lang/language.ur.json
@@ -477,5 +477,6 @@
   "optional": "Optional",
   "dataFromNMSCD": "Data below supplied by the NMSCD",
   "communityMissionProgressTracker": "Community Mission Progress Tracker",
-  "hashCode": "75F6AE573D289E0E8AB5656FEFAD01A4"
+  "fishingJson": "en/Fishing.lang",
+  "hashCode": "21A63E23FAB0B9F456621BC19CD3372E"
 }
