--- a/src/assets/lang/language.vi-vn.json
+++ b/src/assets/lang/language.vi-vn.json
@@ -477,5 +477,6 @@
   "optional": "Optional",
   "dataFromNMSCD": "Data below supplied by the NMSCD",
   "communityMissionProgressTracker": "Community Mission Progress Tracker",
-  "hashCode": "D1B12825883F8254DE1F086FC2BD9382"
+  "fishingJson": "en/Fishing.lang",
+  "hashCode": "0A97195FC72430F52CFA5E5E08B0DE71"
 }
