--- a/src/assets/lang/language.zh-hans.json
+++ b/src/assets/lang/language.zh-hans.json
@@ -477,5 +477,6 @@
   "optional": "可选",
   "dataFromNMSCD": "以下数据由NMSCD提供",
   "communityMissionProgressTracker": "社区任务进度追踪器",
-  "hashCode": "912138A922B23D20FE3514E8D3CD3976"
+  "fishingJson": "zh-hans/Fishing.lang",
+  "hashCode": "D9E5AB8DAB470927F4918CFD0B1EA1D0"
 }
