--- a/src/assets/lang/language.zh-hant.json
+++ b/src/assets/lang/language.zh-hant.json
@@ -477,5 +477,6 @@
   "optional": "Optional",
   "dataFromNMSCD": "Data below supplied by the NMSCD",
   "communityMissionProgressTracker": "Community Mission Progress Tracker",
-  "hashCode": "B937D5AAC6E2D5252DABA7CC025A8F28"
+  "fishingJson": "zh-hant/Fishing.lang",
+  "hashCode": "569C3D3F5CEB495B244ADF6B11EDD425"
 }
