--- a/src/assets/lang/language.hu.json
+++ b/src/assets/lang/language.hu.json
@@ -477,5 +477,6 @@
   "optional": "Optional",
   "dataFromNMSCD": "Data below supplied by the NMSCD",
   "communityMissionProgressTracker": "Community Mission Progress Tracker",
-  "hashCode": "68E27BAB387117F4C33A7CD8D8C3BD8F"
+  "fishingJson": "en/Fishing.lang",
+  "hashCode": "621E7F21E5173FACC561A359D0C960FA"
 }
