--- a/src/assets/lang/language.pl.json
+++ b/src/assets/lang/language.pl.json
@@ -477,5 +477,6 @@
   "optional": "Opcjonalne",
   "dataFromNMSCD": "Poniższe dane dostarczone przez NMSCD",
   "communityMissionProgressTracker": "Śledzenie postępu misji społeczności",
-  "hashCode": "61E7B662462D28B53A9125DF2A4EE219"
+  "fishingJson": "pl/Fishing.lang",
+  "hashCode": "A31B349A631113E1E69AC1D7265A9730"
 }
