--- a/src/assets/lang/language.tl.json
+++ b/src/assets/lang/language.tl.json
@@ -477,5 +477,6 @@
   "optional": "Optional",
   "dataFromNMSCD": "Data below supplied by the NMSCD",
   "communityMissionProgressTracker": "Community Mission Progress Tracker",
-  "hashCode": "5F94D5DE963AB0C25472FB9D519F2911"
+  "fishingJson": "en/Fishing.lang",
+  "hashCode": "4B7EA76AA3A996C1C307F4CD45303431"
 }
